--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,9 @@
 # .NET Desktop
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: |
+      echo 'BBASH!'
 # Build and run tests for .NET Desktop or Windows classic desktop solutions.
 # Add steps that publish symbols, save build artifacts, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/apps/windows/dot-net
