--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,7 @@ jobs:
         Get-Service 'Windows Audio'
     - script: python3 -m pip install --upgrade Pillow
       displayName: Pillow install
+    - script: dxdiag /dontskip /whql:off /t c:\dxdiagraw.txt
     - script: C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "pacman -Q"
       displayName: Default Installed packages
     - script: |
@@ -44,7 +45,9 @@ jobs:
     - script: C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "pacman -Q"
       displayName: Installed Packages
       workingDirectory: C:\enigma-dev
-      
+    
+    - script: C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "./test-runner.exe"
+      displayName: Running Tests
       #mingw-w64-x86_64-gtest
       #mingw-w64-x86_64-imagemagick
       #mingw-w64-x86_64-jq 1.6-5
@@ -60,7 +63,7 @@ jobs:
     - task: PublishBuildArtifacts@1
       displayName: 'Push Build Artifacts'
       inputs:
-        pathtoPublish: C:\enigma-dev\test-harness-out\
+        pathtoPublish: C:\dxdiagraw.txt
         artifactName: Test-Harness-Png
         
 
