--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,5 +32,6 @@ jobs:
     - script: |
         git clone https://github.com/enigma-dev/enigma-dev.git
         (robocopy $(Build.SourcesDirectory)\enigma-dev C:\enigma-dev /COPYALL /E) ^& IF %ERRORLEVEL% LEQ 1 exit 0
+    - script: |    
         cd C:\enigma-dev
         ./enigma-bootstrap.bat
