--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,4 +34,4 @@ jobs:
         (robocopy $(Build.SourcesDirectory)\enigma-dev C:\enigma-dev /COPYALL /E) ^& IF %ERRORLEVEL% LEQ 1 exit 0
     - script: |    
         cd C:\enigma-dev
-        .\enigma-bootstrap.bat
+        .\enigma_bootstrap.bat
