Fresh run 1, no windows harness

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,7 @@ pr:  # Trigger a build on every PR.
     include:
       - '*'  # Must quote since "*" is a YAML reserved character
 
+jobs:
 - job: TestHarness
   displayName: 'Test Harness'
   variables:
