--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,12 +25,17 @@ jobs:
         Get-Service 'Windows Audio'
         Start-Service 'Windows Audio'
         Get-Service 'Windows Audio'
+    - script: C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "printenv"
     - script: |
         (robocopy $(Build.SourcesDirectory) C:\enigma-dev /COPYALL /E) ^& IF %ERRORLEVEL% LEQ 1 exit 0
     - script: |
         enigma_bootstrap.bat
-    - script: C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "./test-runner.exe"
-
+        python3 -m pip install --upgrade Pillow
+    - script: C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "printenv"
+    - script: |
+        Get-Service: 'Windows Audio'  
+        C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "pacman -Q"
+        C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "./test-runner.exe"
       workingDirectory: C:\enigma-dev
 
 - job: TestHarness
