Fresh2 environment and lcov check.2

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,17 +25,22 @@ jobs:
         Get-Service 'Windows Audio'
         Start-Service 'Windows Audio'
         Get-Service 'Windows Audio'
+      displayName: 'Enable Windows Audio'
     - script: C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "printenv"
+      displayName: 'printenv'
     - script: |
         (robocopy $(Build.SourcesDirectory) C:\enigma-dev /COPYALL /E) ^& IF %ERRORLEVEL% LEQ 1 exit 0
+    - script: C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "lcov"
+      displayName: 'lcov'
     - script: |
         enigma_bootstrap.bat
         python3 -m pip install --upgrade Pillow
-    - script: C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "lcov"
+      displayName: 'Bootstrap enigma and install pillow'
     - script: |
         Get-Service: 'Windows Audio'  
         C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "pacman -Q && mkdir test-harness-out"
         C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "./test-runner.exe"
+      displayName: 'Run Test-Runner'
       workingDirectory: C:\enigma-dev
     - task: PublishBuildArtifacts@1
       displayName: 'Push Build Artifacts'
