--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,11 +30,11 @@ jobs:
       displayName: 'printenv'
     - script: |
         (robocopy $(Build.SourcesDirectory) C:\enigma-dev /COPYALL /E) ^& IF %ERRORLEVEL% LEQ 1 exit 0
-    - script: C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "lcov"
-      displayName: 'lcov'
+
     - script: |
         enigma_bootstrap.bat
         python3 -m pip install --upgrade Pillow
+        C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "lcov"
       displayName: 'Bootstrap enigma and install pillow'
     - script: |
         Get-Service: 'Windows Audio'  
