--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,12 +30,20 @@ jobs:
       displayName: 'printenv'
     - script: |
         (robocopy $(Build.SourcesDirectory) C:\enigma-dev /COPYALL /E) ^& IF %ERRORLEVEL% LEQ 1 exit 0
-    - script: enigma_bootstrap.bat
-      displayName: 'Enigma Bootstrap'
+    - script: C:\msys64\msys2_shell.cmd -defterm -no-start -c "pacman -Sy --noconfirm --needed git make rsync mingw-w64-x86_64-toolchain mingw-w64-x86_64-boost mingw-w64-x86_64-pugixml mingw-w64-x86_64-rapidjson mingw-w64-x86_64-yaml-cpp mingw-w64-x86_64-grpc mingw-w64-x86_64-protobuf mingw-w64-x86_64-glm mingw-w64-x86_64-libpng mingw-w64-x86_64-re2 mingw-w64-x86_64-box2d mingw-w64-x86_64-libffi mingw-w64-x86_64-glew mingw-w64-x86_64-openal mingw-w64-x86_64-dumb mingw-w64-x86_64-alure mingw-w64-x86_64-libmodplug mingw-w64-x86_64-libvorbis mingw-w64-x86_64-libogg mingw-w64-x86_64-flac mingw-w64-x86_64-mpg123 mingw-w64-x86_64-libsndfile mingw-w64-x86_64-libgme mingw-w64-x86_64-SDL2 mingw-w64-x86_64-SDL2_mixer mingw-w64-x86_64-libepoxy mingw-w64-x86_64-gtest mingw-w64-x86_64-libmodplug lcov
+      displayName: Install mingw stuff
     - script: |
         python3 -m pip install --upgrade Pillow
-        C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "lcov"
-      displayName: 'Bootstrap enigma and install pillow'
+        C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "ls"
+      displayName: 'install pillow show msys working dir'
+    - script: C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "ls"
+      displayName: 'msys working dir with workingDirectory: c:\enigma-dev'
+      workingDirectory: C:\enigma-dev
+
+    - script: ls
+    - script: C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -c "cd C:/enigma-dev && make all"
+      workingDirectory: C:\enigma-dev
+
     - script: |
         C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "pacman -Q && mkdir test-harness-out"
     - script: C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "./test-runner.exe"
