Check Working directories at different levels

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,10 +46,10 @@ jobs:
 
     - script: |
         C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "pacman -Q"
-    - script: C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "./test-runner.exe -gtest_filter=Regression.*"
+    - script: C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "./test-runner.exe"
       displayName: 'Run Test-Runner'
       workingDirectory: C:\enigma-dev
     - task: PublishBuildArtifacts@1
       displayName: 'Push Build Artifacts'
       inputs:
-        pathtoPublish: 'C:\enigma-dev\test-harness-out'
+        pathtoPublish: 'C:\enigma-dev\test-harness-out\'
